ejercicios bubble sort, Luhn, cifrado Cesar. Renombre archivos

--- a/A6.Clase6-10/Luhn/Luhn.html
+++ b/A6.Clase6-10/Luhn/Luhn.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Ejercicio Logica 1</title>
-		<script type="text/javascript" src="index.js"></script>	
+		<title>Algortimo Luhn</title>
+		<script type="text/javascript" src="Luhn.js"></script>	
 	</head>
 	<body>
 		
