--- a/A7.Clase9-10/Factorial/Factorial.html
+++ b/A7.Clase9-10/Factorial/Factorial.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Ejercicio Logica 1</title>
-		<script type="text/javascript" src="index.js"></script>	
+		<title>Factorial</title>
+		<script type="text/javascript" src="Factorial.js"></script>	
 	</head>
 	<body>
 		
