--- a/A9.Clase11-10/Bubble-Sort/bbsort.html
+++ b/A9.Clase11-10/Bubble-Sort/bbsort.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Ejercicio Logica 1</title>
-		<script type="text/javascript" src="index.js"></script>	
+		<title>Bubble Sort</title>
+		<script type="text/javascript" src="bbsort.js"></script>	
 	</head>
 	<body>
 		
